# Jubarte

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.json  main.py  pyproject.toml  schedule.ics  test.ics
jubarte/: app.py  cli.py  models.py
jubarte/core/: scheduler.py
jubarte/export/: ics_exporter.py
jubarte/storage/: file_store.py  memory_store.py
jubarte/ui/: interactive.py
scripts/: git_commit.py
tests/: test_scheduler.py
